# guild-demo-fastapi

./: auth.py  main.py  models.py  pyproject.toml
routers/: departments.py  employees.py  roles.py
