[tool.poetry]
package-mode = false
name = "guild-demo-fastapi"
version = "0.1.0"
description = "Guild demo api with fastAPI"
authors = ["Nikos Daskalakis <nikos.daskalakis@satorianalytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.16"
jwt = "^1.3.1"
pyjwt = "^2.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
liccheck = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
